# pulse-3d-drillholes-solution

./: .firebaserc  .gitignore  CLAUDE.md  NOTES.md  README.md  firebase.json
backend/: .dockerignore  .gcloudignore  Dockerfile  pyproject.toml  run.py
backend/app/: clustering.py  config.py  desurvey.py  estimation.py  loader.py  main.py  models.py  quality.py
backend/data/: drill_intercepts.csv  drillhole_collars.csv
backend/scripts/: analyse_data.py
backend/tests/: conftest.py  test_analyse_script.py  test_api.py  test_clustering.py  test_desurvey.py  test_estimation.py  test_loader.py  test_models.py  test_performance.py  test_quality.py
docs/: architecture.md  coding-standards.md  data-pipeline.md  decisions.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: BoundsContent.tsx  CameraController.tsx  ClusterMarker.tsx  DrillholeGroup.tsx  DrillholeTrace.test.tsx  DrillholeTrace.tsx  GradeCloud.tsx  GradeLegend.test.tsx  GradeLegend.tsx  Header.test.tsx  Header.tsx  HelpPopup.test.tsx  HelpPopup.tsx  InfoPanel.test.tsx  InfoPanel.tsx  InterceptSegment.tsx  MapPlane.tsx  PdfViewer.tsx  Scene.tsx  Tooltip.tsx
frontend/src/hooks/: useDrillholes.ts
frontend/src/store/: useStore.test.ts  useStore.ts
frontend/src/types/: drillhole.ts
metrics/: backend.json  budgets.json
scripts/: deploy.sh  helpers.sh  setup.sh
(+3 files in other folders)
